--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ htmlcov/
 # -------------------------
 # Node / TypeScript
 # -------------------------
+typescript/tmp/
 node_modules/
 npm-debug.log*
 yarn-debug.log*
