feat: Update schema versions and references across JSON files
- Added `$schemaRef` to Shader and Synesthetic asset example JSON files to ensure schema validation.
- Updated schema version references in control, haptic, modulation, rule, shader, synesthetic-asset, and tone schemas from 0.1.0 to 0.7.0.
- Enhanced `normalize_schemas.py` to support dynamic schema versioning based on `version.json`.
- Improved validation scripts to enforce schema references and ensure consistency across examples.
- Introduced Makefile for streamlined schema normalization, validation, and code generation processes.
- Added scripts for bumping schema versions and ensuring code generation cleanliness.
- Updated package dependencies to fixed versions for consistency.
- Enhanced preflight checks to ensure all schemas are linted and validated before commits.
- Updated docs

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@apidevtools/json-schema-ref-parser": "^14.2.0",
-    "json-schema-to-typescript": "^15.0.4"
+    "@apidevtools/json-schema-ref-parser": "14.2.0",
+    "json-schema-to-typescript": "15.0.4"
   }
 }
