--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,12 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
-jsonschema = "<4.18"
+jsonschema = ">=4.22,<4.23"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.0"
+pydantic = "^2.7.0"
+datamodel-code-generator = "0.25.8"
 
 [build-system]
 requires = ["poetry-core>=1.9.0"]
