Implement deterministic QA process for Synesthetic examples
- Added JSON and Markdown reports for QA results, including spec status, totals, blessed examples, and duplicates.
- Created a new Python script for quality control (examples_qc.py) that validates example JSON files against a canonical schema, emits draft specs if absent, and generates reports.
- Introduced a structured approach to detect duplicates and validate example files, ensuring compliance with schema requirements.
- Developed unit tests to cover key functionalities of the QA process, including validation, duplicate detection, and draft emission.
- Established a clear workflow for CI integration, ensuring that invalid examples or duplicates block merges until resolved.

--- a/poetry.toml
+++ b/poetry.toml
@@ -1,2 +1,4 @@
 [virtualenvs]
-create = false
+# Always use a project-local virtualenv to avoid leaking into user/site Pythons
+create = true
+in-project = true
