rm venv cruftshit

--- a/poetry.toml
+++ b/poetry.toml
@@ -1,4 +1,4 @@
 [virtualenvs]
 # Always use a project-local virtualenv to avoid leaking into user/site Pythons
-create = true
+create = false
 in-project = true
