--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main, master ]
   pull_request:
 
+env:
+  RUN_FULL_NIX: 0
+
 jobs:
   preflight:
     runs-on: ubuntu-latest
@@ -16,12 +19,25 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Nix and configure Cachix
+        if: env.RUN_FULL_NIX == '1'
         uses: cachix/install-nix-action@v26
         with:
           extra_nix_config: |
             experimental-features = nix-command flakes
           cachix_name: synesthetic # IMPORTANT: Replace with your Cachix cache name
           cachix_auth_token: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
+      - name: Install Poetry and Node without Nix
+        if: env.RUN_FULL_NIX != '1'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3 python3-venv python3-pip pipx
+          python3 -m pip install --upgrade pip
+          pipx ensurepath
+          pipx install poetry
+          echo "$HOME/.local/bin" >> "$GITHUB_PATH"
+          curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+          sudo apt-get install -y nodejs
 
       - name: Cache Poetry virtual environment
         uses: actions/cache@v4
@@ -39,13 +55,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-npm-
 
-      - name: Install project dependencies
+      - name: Install project dependencies (Nix)
+        if: env.RUN_FULL_NIX == '1'
         run: |
           nix develop --command bash -c "
             echo '--- Installing project dependencies for CI ---'
             poetry install
             npm install
           "
+
+      - name: Install project dependencies (non-Nix)
+        if: env.RUN_FULL_NIX != '1'
+        run: |
+          poetry config virtualenvs.in-project true --local
+          poetry install
+          npm install
 
       - name: Check for codegen-related file changes
         id: changes
@@ -62,12 +86,22 @@ jobs:
               - 'package-lock.json'
               - 'Makefile'
 
-      - name: Run preflight (with codegen-check)
-        if: steps.changes.outputs.codegen == 'true'
+      - name: Run preflight (with codegen-check) [Nix]
+        if: env.RUN_FULL_NIX == '1' && steps.changes.outputs.codegen == 'true'
         run: |
           nix develop --command ./preflight.sh
 
-      - name: Run preflight (skip codegen-check)
-        if: steps.changes.outputs.codegen != 'true'
+      - name: Run preflight (with codegen-check) [non-Nix]
+        if: env.RUN_FULL_NIX != '1' && steps.changes.outputs.codegen == 'true'
+        run: |
+          ./preflight.sh
+
+      - name: Run preflight (skip codegen-check) [Nix]
+        if: env.RUN_FULL_NIX == '1' && steps.changes.outputs.codegen != 'true'
         run: |
           nix develop --command bash -c "SKIP_CODEGEN_CHECK=1 ./preflight.sh"
+
+      - name: Run preflight (skip codegen-check) [non-Nix]
+        if: env.RUN_FULL_NIX != '1' && steps.changes.outputs.codegen != 'true'
+        run: |
+          SKIP_CODEGEN_CHECK=1 ./preflight.sh
